--- a/package.json
+++ b/package.json
@@ -22,11 +22,21 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-fastify": "^8.2.6",
+    "@nestjs/mongoose": "^9.0.1",
+    "axios": "^0.21.1",
+    "class-validator": "^0.13.1",
+    "dotenv": "^10.0.0",
+    "express-http-context": "^1.2.4",
+    "nest-winston": "^1.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "winston": "^3.3.3",
+    "mongoose": "^6.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
